fix: 把 interpolation 翻译成的插值表达式改为插值

--- a/aio/content/guide/i18n.md
+++ b/aio/content/guide/i18n.md
@@ -602,7 +602,7 @@ for two, three, or any other number if the pluralization rules were different. F
 
   You can use interpolations and html markup inside of your translations.
 
-  你可以在翻译结果中使用插值表达式和 HTML 标记。
+  你可以在翻译结果中使用插值和 HTML 标记。
 
 </div>
 
